--- a/minitarea1.ipynb
+++ b/minitarea1.ipynb
@@ -94,14 +94,40 @@
       "metadata": {
         "id": "ggrfJEh8B2dR",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3f6d1d7e-fdcf-43b5-bafc-a77ab8008fb0"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "planetas=['mercurio','venus','tierra','marte','jupiter','saturno','urano','neptuno']\n",
+        "radio_planetas=[2439.7, 6051.8, 6371, 3389.5, 69911, 58232, 25362, 24622]\n",
+        "distancia_planetas=[57909175, 108208930 ,149597870, 227936640, 778412010, 1426725400, 2870972200, 4498252900]\n",
+        "\n",
+        "num_planetas= len(planetas)\n",
+        "num_radios=len(radio_planetas)\n",
+        "num_distancias=len(distancia_planetas)\n",
+        "\n",
+        "def check(a,b,c):\n",
+        "  if a==b and b==c:\n",
+        "    print('Checksum: Todas las listas tienen el mismo tamaño')\n",
+        "  else: \n",
+        "    print('Checksum: ERROR: NO todas las listas tienen el mismo tamaño!')\n",
+        "\n",
+        "checksum=check(num_planetas,num_radios,num_distancias)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Checksum: Todas las listas tienen el mismo tamaño\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
