P3 terminada, se agregan comentarios anteriores y modificacion P2

--- a/minitarea1.ipynb
+++ b/minitarea1.ipynb
@@ -62,7 +62,8 @@
       "cell_type": "code",
       "source": [
         "AU=149597870.7\n",
-        "radio_tierra=6371"
+        "radio_tierra=6371\n",
+        "#Valores en km"
       ],
       "execution_count": 0,
       "outputs": []
@@ -98,7 +99,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3f6d1d7e-fdcf-43b5-bafc-a77ab8008fb0"
+        "outputId": "9fc49f24-cefb-4bff-c6a2-e2dd7d103bee"
       },
       "cell_type": "code",
       "source": [
@@ -110,15 +111,23 @@
         "num_radios=len(radio_planetas)\n",
         "num_distancias=len(distancia_planetas)\n",
         "\n",
-        "def check(a,b,c):\n",
-        "  if a==b and b==c:\n",
-        "    print('Checksum: Todas las listas tienen el mismo tamaño')\n",
-        "  else: \n",
-        "    print('Checksum: ERROR: NO todas las listas tienen el mismo tamaño!')\n",
+        "#def check(a,b,c):\n",
+        "#  if a==b and b==c:\n",
+        "#    print('Checksum: Todas las listas tienen el mismo tamaño')\n",
+        "#  else: \n",
+        "#    print('Checksum: ERROR: NO todas las listas tienen el mismo tamaño!')\n",
         "\n",
-        "checksum=check(num_planetas,num_radios,num_distancias)\n"
+        "#checksum=check(num_planetas,num_radios,num_distancias)     \n",
+        "\n",
+        "# ---cambio la funcion para seguir lo que dice el enunciado de mejor forma---#\n",
+        "\n",
+        "checksum= (num_planetas==num_radios and num_radios==num_distancias) #---Ahora checksum es un bool y no un llamado de funcion\n",
+        "if checksum:\n",
+        "  print('Checksum: Todas las listas tienen el mismo tamaño')\n",
+        "else:\n",
+        "  print('Checksum: ERROR: NO todas las listas tienen el mismo tamaño!')"
       ],
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,32 +165,37 @@
       "metadata": {
         "id": "7Q3_QbQKlpQA",
         "colab_type": "code",
-        "outputId": "f1934f33-91d5-4ba8-a518-58d8e192e57b",
+        "outputId": "e243fff3-457f-4660-d387-b3ccc7eb995b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 169
+          "height": 34
         }
       },
       "cell_type": "code",
       "source": [
         "# Define acá la clase Planeta\n",
-        "\n",
-        "\n",
+        "class Planeta:\n",
+        "  def __init__(self,nombre,radio,distancia):\n",
+        "    self.n=nombre\n",
+        "    self.r=radio        #en km\n",
+        "    self.d=distancia    #en km\n",
+        "    \n",
+        "  def info(self):\n",
+        "    print(self.n+', radio='+self.r+' [km]'+', distancia='+self.d+' [km]')\n",
+        "    return\n",
         "# aca creamos una instancia de vulcano como Planeta\n",
-        "vulcano = Planeta(nombre, radio, distancia)"
+        "\n",
+        "vulcano = Planeta('Vulcano', '90', '150000000')\n",
+        "vulcano.info()"
       ],
-      "execution_count": 0,
+      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-793065478766>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvulcano\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPlaneta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnombre\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mradio\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdistancia\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'Planeta' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Vulcano, radio=90 [km], distancia=150000000 [km]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
