Fn info modificada (P3), P4 agregada

--- a/minitarea1.ipynb
+++ b/minitarea1.ipynb
@@ -165,7 +165,7 @@
       "metadata": {
         "id": "7Q3_QbQKlpQA",
         "colab_type": "code",
-        "outputId": "e243fff3-457f-4660-d387-b3ccc7eb995b",
+        "outputId": "9411e0ba-03fd-40ea-faf9-1db502c562fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -181,21 +181,26 @@
         "    self.d=distancia    #en km\n",
         "    \n",
         "  def info(self):\n",
-        "    print(self.n+', radio='+self.r+' [km]'+', distancia='+self.d+' [km]')\n",
-        "    return\n",
+        "    return (str(self.n)+', radio= '+ str(self.r)+' [km]'+', distancia= '+ str(self.d)+' [km]')\n",
+        "    \n",
         "# aca creamos una instancia de vulcano como Planeta\n",
         "\n",
-        "vulcano = Planeta('Vulcano', '90', '150000000')\n",
+        "vulcano = Planeta('Vulcano', 90, 150000000)\n",
         "vulcano.info()"
       ],
-      "execution_count": 44,
+      "execution_count": 70,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Vulcano, radio=90 [km], distancia=150000000 [km]\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Vulcano, radio= 90 [km], distancia= 150000000 [km]'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 70
         }
       ]
     },
@@ -216,14 +221,47 @@
       "metadata": {
         "id": "u2apsioWCN5_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "aecc02e4-3f40-4fe2-fe17-089dcf2ad7df"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "planetas=['mercurio','venus','tierra','marte','jupiter','saturno','urano','neptuno']\n",
+        "radio_planetas=[2439.7, 6051.8, 6371, 3389.5, 69911, 58232, 25362, 24622]\n",
+        "distancia_planetas=[57909175, 108208930 ,149597870, 227936640, 778412010, 1426725400, 2870972200, 4498252900]\n",
+        "\n",
+        "#---transforma listas con datos ordenados a lista de objetos Planeta---#\n",
+        "def crear_Planetas(l1,l2,l3,LP=[]):\n",
+        "  for i in range(len(l1)):\n",
+        "    p=Planeta(l1[i],l2[i],l3[i])\n",
+        "    LP=LP+[p]\n",
+        "  return LP\n",
+        "\n",
+        "v=crear_Planetas(planetas,radio_planetas,distancia_planetas) #---Lista con objetos del sist.solar---#\n",
+        "\n",
+        "#---Crea diccionario a partir de dos listas---#\n",
+        "def crear_dict(l1,l2,D={},L=[]):\n",
+        "  for i in range(len(l1)):\n",
+        "    D.update({l1[i]:l2[i].info()})\n",
+        "  return D\n",
+        "\n",
+        "dict_planetas=crear_dict(planetas,v)\n",
+        "print(dict_planetas)\n",
+        "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'mercurio': 'mercurio, radio= 2439.7 [km], distancia= 57909175 [km]', 'venus': 'venus, radio= 6051.8 [km], distancia= 108208930 [km]', 'tierra': 'tierra, radio= 6371 [km], distancia= 149597870 [km]', 'marte': 'marte, radio= 3389.5 [km], distancia= 227936640 [km]', 'jupiter': 'jupiter, radio= 69911 [km], distancia= 778412010 [km]', 'saturno': 'saturno, radio= 58232 [km], distancia= 1426725400 [km]', 'urano': 'urano, radio= 25362 [km], distancia= 2870972200 [km]', 'neptuno': 'neptuno, radio= 24622 [km], distancia= 4498252900 [km]'}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
